// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.Countdown should render correctly with expiry in 60 seconds 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #39e673;
  font-size: 13px;
  line-height: 1.4;
}

<div
  className="c0"
  color="superGreen"
  fontSize="m"
>
  Expires
  <i>
     
  </i>
  in 1 minute
</div>
`;

exports[`component.UI.Countdown should render correctly with expiry in 365 days 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #39e673;
  font-size: 13px;
  line-height: 1.4;
}

<div
  className="c0"
  color="superGreen"
  fontSize="m"
>
  Expires
  <i>
     
  </i>
  in 365 days
</div>
`;

exports[`component.UI.Countdown should render correctly with expiry set to a date 1 hour in the past 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #e63939;
  font-size: 13px;
  line-height: 1.4;
}

<div
  className="c0"
  color="superRed"
  fontSize="m"
>
  Expired
  <i>
     
  </i>
  1 hour ago
</div>
`;
